--- a/looplab/public/index.html
+++ b/looplab/public/index.html
@@ -25,6 +25,55 @@
       </div>
     </nav>
     <!--///// HOME SECTION //////-->
+    <section id="home-section">
+      <div class="dark-overlay">
+        <div class="home-inner">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 d-none d-lg-block">
+                <h1 class="display-4">
+                   Build <strong>social profiles </strong>and gain revenue and profits</h1>
+                <div class="d-flex flex-row">
+                  <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+                  <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+                  <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+                  <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card bg-primary text-center card-form">
+                  <div class="card-body">
+                    <h3>Sifgn Up Today</h3>
+                    <p>Please fill out this form to register</p>
+                    <form action="">
+                      <div class="form-group">
+                        <input class="form-control form-control-lg" type="text" name="username" placeholder="Username"/>
+                      </div>
+                      <div class="form-group">
+                        <input class="form-control form-control-lg" type="email" name="email" placeholder="Email"/>
+                      </div>
+                      <div class="form-group">
+                        <input class="form-control form-control-lg" type="password" name="password" placeholder="Password"/>
+                      </div>
+                      <div class="form-group">
+                        <input class="form-control form-control-lg" type="password" name="password_confirm" placeholder="Confirm password"/>
+                      </div>
+                      <input class="btn btn-outline-light btn-block" type="submit" value="Submit"/>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--///////////////////////////////-->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
