--- a/looplab/public/index.html
+++ b/looplab/public/index.html
@@ -10,13 +10,13 @@
     <title>LoopLab</title>
   </head>
   <body>
-    <!--///// NAVIGATION ////////-->
+    <!--///// NAVIGATION ///////-->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <div class="container"><a class="navbar-brand" href="/">LoopLab</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#home-section">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#explore-head-section">Explore</a></li>
             <li class="nav-item"><a class="nav-link" href="#create-head-section">Create</a></li>
             <li class="nav-item"><a class="nav-link" href="#share-head-section">Share</a></li>
@@ -24,7 +24,7 @@
         </div>
       </div>
     </nav>
-    <!--///// HOME SECTION //////-->
+    <!--///// HOME SECTION /////-->
     <section id="home-section">
       <div class="dark-overlay">
         <div class="home-inner">
@@ -69,6 +69,114 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/// EXPLORE SECTION ////-->
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <div class="py-5">
+              <h1 class="display-4">Explore</h1>
+              <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quae est inventore, quidem similique culpa nisi dolores facilis id! Ipsam modi, ipsa voluptatem aspernatur placeat earum aliquam neque ut quam?</p><a class="btn btn-secondary" href="#">Find out more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-light text-muted py-5" id="explore-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6"><img class="img-fluid rounded-circle mb-3" src="img/android-applications-apps-50614.jpg" alt=""/></div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur recusandae tenetur, similique, incidunt accusantium suscipit cupiditate illo atque repellendus quos, id quis assumenda numquam provident quo! Pariatur nulla natus molestias.</p>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/// CREATE SECTION /////-->
+    <section class="bg-info" id="create-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <div class="py-5">
+              <h1 class="display-4">Create</h1>
+              <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quae est inventore, quidem similique culpa nisi dolores facilis id! Ipsam modi, ipsa voluptatem aspernatur placeat earum aliquam neque ut quam?</p><a class="btn btn-outline-light" href="#">Find out more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="py-5" id="create-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Create your passion</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur recusandae tenetur, similique, incidunt accusantium suscipit cupiditate illo atque repellendus quos, id quis assumenda numquam provident quo! Pariatur nulla natus molestias.</p>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+          </div>
+          <div class="col-md-6"><img class="img-fluid rounded-circle mb-3" src="img/app-business-connection-221185.jpg" alt=""/></div>
+        </div>
+      </div>
+    </section>
+    <!--/// SHARE SECTION //////-->
+    <section class="bg-primary" id="share-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <div class="py-5">
+              <h1 class="display-4">Share</h1>
+              <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quae est inventore, quidem similique culpa nisi dolores facilis id! Ipsam modi, ipsa voluptatem aspernatur placeat earum aliquam neque ut quam?</p><a class="btn btn-secondary" href="#">Find out more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-light text-muted py-5" id="share-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6"><img class="img-fluid rounded-circle mb-3" src="img/american-casual-cellphone-1289898.jpg" alt=""/></div>
+          <div class="col-md-6">
+            <h3>Share what you create</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur recusandae tenetur, similique, incidunt accusantium suscipit cupiditate illo atque repellendus quos, id quis assumenda numquam provident quo! Pariatur nulla natus molestias.</p>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
+            </div>
+            <div class="d-flex flex-row">
+              <div class="p-4 alighn-self-start"><i class="fa fa-check"></i></div>
+              <div class="p-4 alighn-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In temporibus reprehenderit tempora ex officiis, deserunt quibusdam voluptatem quae similique ipsam sapiente?</div>
             </div>
           </div>
         </div>
