--- a/looplab/public/index.html
+++ b/looplab/public/index.html
@@ -182,7 +182,50 @@
         </div>
       </div>
     </section>
-    <!--///////////////////////////////-->
+    <!--/////// FOOTER /////////-->
+    <footer id="main-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <div class="py-4">
+              <h1 class="h3">LoopLab</h1>
+              <p>Copyright &copy; 2018</p>
+              <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact Us</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--//// CONTACT MODAL /////-->
+    <div class="modal fade text-dark" id="contactModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="contactModalTitle">Contact Us</h5>
+            <button class="close" data-dismiss="modal"><span>&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <form action="">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input class="form-control" type="text"/>
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email"/>
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary btn-block" type="type">Send</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
