--- a/mizuxe/public/index.html
+++ b/mizuxe/public/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <title>Mizuxe</title>
   </head>
   <body>
-    <!--///// NAVIGATION ///////-->
+    <!--///// NAVIGATION /////////-->
     <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
       <div class="container"><a class="navbar-brand" href="#"><img src="img/logo.png" width="50" heigh="50"/>
           <h3 class="d-inline align-middle">Mizuxe</h3></a>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </nav>
-    <!--///// SHOWCASE /////////-->
+    <!--///// SHOWCASE ///////////-->
     <section class="py-5" id="showcase">
       <div class="container text-white">
         <div class="row">
@@ -125,7 +125,7 @@
               <div class="card">
                 <div class="card-header" id="heading3">
                   <h5 class="mb-0">
-                    <div href="#collapse3" data-toggle="collapse" data-parent="#accordion"><i class="fa fa-arrow-circle-down"></i> Open Your Mind</div>
+                    <div href="#collapse3" data-toggle="collapse" data-parent="#accordion"><i class="fa fa-arrow-circle-down"></i>Open Your Mind</div>
                   </h5>
                 </div>
                 <div class="collapse" id="collapse3">
@@ -137,6 +137,120 @@
         </div>
       </div>
     </section>
+    <!--////// AUTHORS ///////////-->
+    <section class="my-5 text-center" id="authors">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header pb-5">
+              <h1 class="text-primary pb-3">Our authors</h1>
+              <p class="lead pb-3"></p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam rerum voluptates culpa quis hic libero quaerat optio vitae facilis pariatur suscipit asperiores debitis, est et aliquam provident obcaecati eligendi neque?
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card">
+              <div class="card-body"><img class="img-fluid rounded-circle w-50 mb-3" src="img/person1.jpg" alt="Author 1"/>
+                <h3>Susan Williams</h3>
+                <h5 class="text-muted">Lead Writer</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam rerum voluptates culpa quis.</p>
+                <div class="d-flex flex-row justify-content-center">
+                  <div class="p-4"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-twitter"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card">
+              <div class="card-body"><img class="img-fluid rounded-circle w-50 mb-3" src="img/person2.jpg" alt="Author 2"/>
+                <h3>Grace Smith</h3>
+                <h5 class="text-muted">Co Writer</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam rerum voluptates culpa quis.</p>
+                <div class="d-flex flex-row justify-content-center">
+                  <div class="p-4"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-twitter"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card">
+              <div class="card-body"><img class="img-fluid rounded-circle w-50 mb-3" src="img/person3.jpg" alt="Author 3"/>
+                <h3>John Doe</h3>
+                <h5 class="text-muted">Editor</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam rerum voluptates culpa quis.</p>
+                <div class="d-flex flex-row justify-content-center">
+                  <div class="p-4"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-twitter"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card">
+              <div class="card-body"><img class="img-fluid rounded-circle w-50 mb-3" src="img/person4.jpg" alt="Author 4"/>
+                <h3>Kevin Swanson</h3>
+                <h5 class="text-muted">Designer</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam rerum voluptates culpa quis.</p>
+                <div class="d-flex flex-row justify-content-center">
+                  <div class="p-4"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-twitter"></i></a></div>
+                  <div class="p-4"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/////// CONTACT //////////-->
+    <section class="bg-light py-5" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <h3>Get In Touch</h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, et.</p>
+            <form>
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-user"></i></span></div>
+                  <input class="form-control" type="text" placeholder="Name"/>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-envelope"></i></span></div>
+                  <input class="form-control" type="email" placeholder="Email"/>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend"><span class="input-group-text"><i class="fas fa-pencil-alt"></i></span></div>
+                  <textarea class="form-control" placeholder="Message" rows="5"></textarea>
+                </div>
+              </div>
+              <input class="btn btn-primary btn-block btn-lg" type="submit" value="Submit"/>
+            </form>
+          </div>
+          <div class="col-lg-3 align-self-center"><img class="img-fluid" src="img/logo.png" alt=""/></div>
+        </div>
+      </div>
+    </section>
+    <!--////// FOOTER ////////////-->
+    <footer class="py-5 bg-primary text-white" id="main-footer">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <p class="lead">Copyright © 2018</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
