--- a/mizuxe/public/index.html
+++ b/mizuxe/public/index.html
@@ -17,8 +17,8 @@
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="home">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="showcase">About</a></li>
             <li class="nav-item"><a class="nav-link" href="authors">Authors</a></li>
             <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
           </ul>
